Refactor / fixed workflow toggl process reports

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ Style/StringLiterals:
 
 Style/EmptyLinesAroundBody:
   Enabled: false
+Style/EmptyLinesAroundBlockBody:
+  Enabled: false
 Style/EmptyLinesAroundClassBody:
   Enabled: false
 Style/EmptyLinesAroundModuleBody:
