Using RACK_ENV instead of APP_ENV

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_ENV=development
+RACK_ENV=development
 JIRA_API_URL_PREFIX=https://<REPLACE-ME>.atlassian.net/rest/api/2
 JIRA_USERNAME=<REPLACE-ME>
 JIRA_PASSWORD=<REPLACE-ME>
