--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - mongodb
 env:
   global:
-    - APP_ENV=test
+    - RACK_ENV=test
     - MONGODB_URI=mongodb://127.0.0.1:27017/agilizer
