[issue12] Fix links
They are for humans.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 RACK_ENV=development
 JIRA_API_URL_PREFIX=https://<REPLACE-ME>.atlassian.net/rest/api/2
+JIRA_BROWSER_ISSUE_PREFIX=https://<REPLACE-ME>.atlassian.net/browse
 JIRA_USERNAME=<REPLACE-ME>
 JIRA_PASSWORD=<REPLACE-ME>
 MONGODB_URI=mongodb://127.0.0.1:27017/job_tomate
