[0.2.4] modified Travis MONGODB_URI

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ services:
 env:
   global:
     - RACK_ENV=test
-    - MONGODB_URI=mongodb://127.0.0.1:27017/agilizer
+    - MONGODB_URI=mongodb://127.0.0.1:27017/job_tomate
