[issue#61] added setting to disable async
Will enable testing if the issue is due to the asynchronous mechanism.

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ SLACK_WEBHOOK_URL=https://hooks.slack.com/services/REPLACE-ME
 SLACK_API_TOKEN=<REPLACE-ME>
 TOGGL_API_TOKEN=<REPLACE-ME>
 TOGGL_WORKSPACE_ID=<REPLACE-ME>
+ASYNC_WEB_TRANSACTIONS_ENABLED=false
