Synchronizing users with a Google Sheets doc
- Added a script (`sync_config_from_google_sheets.rb`) that synchronize
`JobTomate::Data::User` records with a Google Sheets doc. The document
is specified by an environment variable. 2 additional environment
variables are necessary to perform Google API calls.

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,8 @@ JIRA_USERNAME=<REPLACE-ME>
 JIRA_PASSWORD=<REPLACE-ME>
 SLACK_WEBHOOK_URL=https://hooks.slack.com/services/REPLACE-ME
 SLACK_API_TOKEN=<REPLACE-ME>
-TOGGL_API_TOKEN=<REPLACE-ME>
-TOGGL_WORKSPACE_ID=<REPLACE-ME>
-TRELLO_CONSUMER_KEY=<REPLACE-ME>
-TRELLO_CONSUMER_SECRET=<REPLACE-ME>
 JIRA_DRY_RUN=false
 ASYNC_WEB_TRANSACTIONS_ENABLED=false
+GOOGLE_AUTH_ID=<REPLACE-ME>
+GOOGLE_AUTH_SECRET=<REPLACE-ME>
+GOOGLE_SHEETS_CONFIGURATION_ID=<REPLACE-ME>
